--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-30 14:14-0400\n"
-"PO-Revision-Date: 2011-08-01 12:38+0200\n"
+"PO-Revision-Date: 2011-08-01 12:42+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -9996,6 +9996,11 @@ msgid ""
 "enabled. Note however, that the general_log produces a lot of data and "
 "increases server load by up to 15%"
 msgstr ""
+"Le moniteur phpMyAdmin peut vous aider à optimiser la configuration serveur "
+"et à traquer les requêtes qui prennent beaucoup de temps. Pour ce faire vous "
+"devrez régler le paramètre log_output à 'TABLE' et activer le journal "
+"slow_query_log ou general_log. Cependant, general_log produit beaucoup de "
+"données et augmente jusqu'à 15% la charge du serveur"
 
 #: server_status.php:1371
 msgid ""
