--- a/po/ja.po
+++ b/po/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-30 14:14-0400\n"
-"PO-Revision-Date: 2011-08-01 12:42+0200\n"
+"PO-Revision-Date: 2011-08-01 12:45+0200\n"
 "Last-Translator: Yuichiro <yuichiro@pop07.odn.ne.jp>\n"
 "Language-Team: japanese <jp@li.org>\n"
 "Language: ja\n"
@@ -9818,7 +9818,6 @@ msgid "Monitor Instructions"
 msgstr "はじめに"
 
 #: server_status.php:1364
-#, fuzzy
 #| msgid ""
 #| "The phpMyAdmin Monitor can assist you in optimizing the server "
 #| "configuration and track down time intensive\n"
@@ -9834,11 +9833,9 @@ msgid ""
 "enabled. Note however, that the general_log produces a lot of data and "
 "increases server load by up to 15%"
 msgstr ""
-"phpMyAdmin モニタは、サーバ構成の最適化を支援し、時間のかかるクエリを追跡する"
-"ことができます。後者の場合には、テーブルに log_output を設定し、"
-"slow_query_log または general_log のいずれかを有効にする必要があります。な"
-"お、general_log を大量のデータを生成し、サーバの負荷を 15% 増加させますので、"
-"注意するようにしてください。"
+"phpMyAdmin モニタは、サーバ構成の最適化を支援し、時間のかかるクエリを追跡することができます。後者の場合には、テーブルに log_output "
+"を設定し、slow_query_log または general_log のいずれかを有効にする必要があります。なお、general_log "
+"を大量のデータを生成し、サーバの負荷を 15% 増加させますので、注意するようにしてください。"
 
 #: server_status.php:1371
 msgid ""
