--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-30 14:14-0400\n"
-"PO-Revision-Date: 2011-08-01 12:42+0200\n"
+"PO-Revision-Date: 2011-08-01 12:53+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -10013,6 +10013,15 @@ msgid ""
 "will load statistics from the logs helping you find what caused the activity "
 "spike.</p>"
 msgstr ""
+"<b>Utilisation de la surveillance :</b><br />Vous êtes maintenant prêt! "
+"Après avoir cliqué sur «Démarrer la surveillance», votre navigateur va "
+"rafraîchir les graphiques à intervalle régulier. Vous pouvez ajouter des "
+"graphiques et modifier le taux de rafraîchissement sous «Paramètres», ou "
+"supprimer tout graphique via l'cône de rouage.<p>Lorsque vous constatez un "
+"pic d'activité soudain, sélectionnez la portion de temps pertinent sur l'un "
+"des graphiques en tenant enfoncé le bouton gauche de la souris et en vous "
+"déplaçant sur le graphique. Ceci va charger les statistiques à partir des "
+"journaux et vous aidera à trouver la cause du pic dans l'activité.</p>"
 
 #: server_status.php:1375
 msgid ""
