Translation update done using Pootle.

--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-30 14:14-0400\n"
-"PO-Revision-Date: 2011-08-01 12:53+0200\n"
+"PO-Revision-Date: 2011-08-01 12:56+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -10031,6 +10031,11 @@ msgid ""
 "disable the general_log and empty its table once monitoring is not required "
 "any more."
 msgstr ""
+"<b>À noter :</b>Activer le journal general_log peut causer une augmentation "
+"de charge de 5 à 15%. Également, la génération des statistiques à partir des "
+"journaux est une tâche intensive, donc il est suggéré de ne sélectionner "
+"qu'une petite portion de temps et de désactiver general_log puis de vider la "
+"table correspondante lorsque la surveillance n'est plus requise."
 
 #: server_status.php:1385
 msgid "CPU Usage"
