Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -4,13 +4,13 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-30 14:14-0400\n"
-"PO-Revision-Date: 2011-07-27 16:54+0200\n"
+"PO-Revision-Date: 2011-08-01 18:45+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.0.5\n"
 
@@ -1326,7 +1326,6 @@ msgid "Analysing & loading logs. This may take a while."
 msgstr "Analizando y cargando registros. Esto puede demorar."
 
 #: js/messages.php:143
-#, fuzzy
 #| msgid ""
 #| "This columns shows the amount of identical queries that are grouped "
 #| "together. However only the SQL Text is being compared, thus the queries "
@@ -1337,8 +1336,9 @@ msgid ""
 "the other attributes of queries, such as start time, may differ."
 msgstr ""
 "Esta columna muestra la cantidad de consultas idénticas que fueron "
-"agrupadas. Sin embargo, sólo el texto SQL es comparado, por lo que los demás "
-"atributos de las consultas como el tiempo de inicio podría diferir."
+"agrupadas. Sin embargo, sólo la consulta SQL en sí es es utilizada para "
+"agrupar, por lo que los demás atributos de las consultas como el tiempo de "
+"inicio podría diferir."
 
 #: js/messages.php:144
 msgid ""
