--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-30 14:14-0400\n"
-"PO-Revision-Date: 2011-08-01 18:45+0200\n"
+"PO-Revision-Date: 2011-08-01 18:46+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -1360,11 +1360,11 @@ msgid "Jump to Log table"
 msgstr "Saltar a la tabla de registros"
 
 #: js/messages.php:148
-#, fuzzy
 #| msgid "Log analysed, but not data found in this time span."
 msgid "Log analysed, but no data found in this time span."
 msgstr ""
-"Registros analizados, pero no se encontraron datos en este período de tiempo."
+"Registros analizados, pero no se encontraron datos en este período de "
+"tiempo."
 
 #. l10n: A collection of available filters
 #: js/messages.php:151
