Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-30 14:14-0400\n"
-"PO-Revision-Date: 2011-08-01 18:46+0200\n"
+"PO-Revision-Date: 2011-08-01 18:52+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -10083,7 +10083,6 @@ msgstr ""
 "hasta en un 15%"
 
 #: server_status.php:1371
-#, fuzzy
 #| msgid ""
 #| "<b>Using the monitor:</b><br/>\n"
 #| "        Ok, you are good to go! Once you click 'Start monitor' your "
@@ -10106,16 +10105,15 @@ msgid ""
 "will load statistics from the logs helping you find what caused the activity "
 "spike.</p>"
 msgstr ""
-"<b>Utilizando el monitorizador:</b><br />\n"
-"¡Ya estás listo! Una vez que pulses en 'Iniciar monitorización' el navegador "
-"actualizará a intervalos regulares todos los gráficos mostrados. Podría "
-"agregar gráficos y cambiar la velocidad de actualización en 'Configuración', "
-"o eliminar cualquier gráfico utilizando el icono de rueda dentada en cada "
-"gráfico.\n"
-"<p>Cuando vea un pico repentino de actividad, seleccione el intervalo de "
-"tiempo relevante en el gráfico manteniendo pulsado el botón izquierdo y "
-"arrastrando sobre el gráfico. Esto cargará las estadísticas de los "
-"registros, lo que lo ayudará a encontrar la causa del pico de actividad.</p>"
+"<b>Utilizando el monitorizador:</b><br /> ¡Ya está listo! Una vez que pulse "
+"en 'Iniciar monitorización' el navegador actualizará a intervalos regulares "
+"todos los gráficos mostrados. Puede agregar gráficos y cambiar la velocidad "
+"de actualización en la sección 'Configuración' o eliminar cualquier gráfico "
+"utilizando el icono de rueda dentada en cada gráfico. <p>Cuando vea un pico "
+"repentino de actividad, seleccione el intervalo de tiempo relevante en el "
+"gráfico manteniendo pulsado el botón izquierdo y arrastrando sobre el "
+"gráfico. Esto cargará las estadísticas de los registros, lo que lo ayudará a "
+"encontrar la causa del pico de actividad.</p>"
 
 #: server_status.php:1375
 #, fuzzy
