--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-30 14:14-0400\n"
-"PO-Revision-Date: 2011-08-01 18:52+0200\n"
+"PO-Revision-Date: 2011-08-01 18:53+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -10116,7 +10116,6 @@ msgstr ""
 "encontrar la causa del pico de actividad.</p>"
 
 #: server_status.php:1375
-#, fuzzy
 #| msgid ""
 #| "<b>Please note:</b>\n"
 #| "        Enabling the general_log may increase the server load by 5-15%. "
@@ -10132,13 +10131,12 @@ msgid ""
 "disable the general_log and empty its table once monitoring is not required "
 "any more."
 msgstr ""
-"<b>Notar que:</b>\n"
-"Activar «general_log» puede aumentar la carga en el servidor hasta un 5-15%. "
-"También esté al tanto que generar estadísticas de los registros es una tarea "
-"muy intensiva por lo que se recomienda seleccionar un período de tiempo lo "
-"más pequeño posible y desactivar «general_log» y vaciar sus tablas una vez "
-"que ya no se necesite monitorizar.\n"
-"        "
+"<b>Notar que:</b> Activar «general_log» puede aumentar la carga en el "
+"servidor hasta un 5-15%. También esté al tanto que generar estadísticas de "
+"los registros es una tarea muy intensiva por lo que se recomienda "
+"seleccionar un período de tiempo lo más pequeño posible y desactivar "
+"«general_log» y vaciar sus tablas una vez que ya no se necesite monitorizar. "
+"       "
 
 #: server_status.php:1385
 msgid "CPU Usage"
