Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,8 +4,8 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-30 14:14-0400\n"
-"PO-Revision-Date: 2011-07-31 21:12+0200\n"
-"Last-Translator:  <mrbendig@mrbendig.com>\n"
+"PO-Revision-Date: 2011-08-01 20:55+0200\n"
+"Last-Translator: Sven Strickroth <email@cs-ware.de>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
@@ -10006,7 +10006,6 @@ msgid "Monitor Instructions"
 msgstr "Einführung zur Überwachung"
 
 #: server_status.php:1364
-#, fuzzy
 #| msgid ""
 #| "The phpMyAdmin Monitor can assist you in optimizing the server "
 #| "configuration and track down time intensive\n"
@@ -10023,7 +10022,7 @@ msgid ""
 "increases server load by up to 15%"
 msgstr ""
 "Die phpMyAdmin-Überwachung kann Sie bei der Server-Konfiguration, und auch "
-"beim Aufspühren von zeitintensiven Abfragen unterstützen. Für das Letztere "
+"beim Aufspühren von zeitintensiven Abfragen unterstützen. Für Letzteres "
 "müssen Sie log_output auf 'TABLE' stellen und entweder slow_query_log oder "
 "general_log aktivieren. Beachten Sie aber, dass das Aktivieren der "
 "general_log viele Daten produzieren und die Serverauslastung um bis zu 15% "
