--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-30 14:14-0400\n"
-"PO-Revision-Date: 2011-08-01 20:55+0200\n"
+"PO-Revision-Date: 2011-08-01 20:57+0200\n"
 "Last-Translator: Sven Strickroth <email@cs-ware.de>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -10029,7 +10029,6 @@ msgstr ""
 "erhöhen kann."
 
 #: server_status.php:1371
-#, fuzzy
 #| msgid ""
 #| "<b>Using the monitor:</b><br/>\n"
 #| "        Ok, you are good to go! Once you click 'Start monitor' your "
@@ -10052,17 +10051,16 @@ msgid ""
 "will load statistics from the logs helping you find what caused the activity "
 "spike.</p>"
 msgstr ""
-"<b>Verwendung der Überwachung:</b><br />\n"
-"OK, Sie sind bereit zum Starten! Sobald Sie 'Überwachung starten' angeklickt "
-"haben, wird Ihr Browser in regelmäßigen Intervallen alle angezeigten "
-"Diagramme aktualisieren. Unter 'Einstellungen' können Sie Diagramme "
-"hinzufügen und das Aktualisierungsintervall ändern oder beliebige Diagramme "
-"entfernen, wenn Sie das Zahnrad-Icon des entsprechenden Schaubilds "
-"verwenden.\n"
-"<p>Wenn Sie eine plötzliche Spitze in der Aktivität feststellen, wählen Sie "
-"den entsprechenden Zeitraum in einem beliebigen Diagramm, indem Sie die\n"
-"linke Maustaste gedrückt halten und über das Schaubild ziehen. Dies wird "
-"Statistiken aus den Protokollen laden um Sie bei der Auffindung der \n"
+"<b>Verwendung der Überwachung:</b><br />OK, Sie sind bereit zum Starten! "
+"Sobald Sie 'Überwachung starten' angeklickt haben, wird Ihr Browser in "
+"regelmäßigen Intervallen alle angezeigten Diagramme aktualisieren. Unter "
+"'Einstellungen' können Sie Diagramme hinzufügen und das "
+"Aktualisierungsintervall ändern oder beliebige Diagramme entfernen, wenn Sie "
+"das Zahnrad-Icon des entsprechenden Schaubilds verwenden.<p>Wenn Sie eine "
+"plötzliche Spitze in der Aktivität feststellen, wählen Sie den "
+"entsprechenden Zeitraum in einem beliebigen Diagramm, indem Sie die linke "
+"Maustaste gedrückt halten und über das Schaubild ziehen. Dies wird "
+"Statistiken aus den Protokollen laden um Sie bei der Auffindung der "
 "Aktivitätsspitze zu unterstützen.</p>"
 
 #: server_status.php:1375
