Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,13 +4,13 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-30 14:14-0400\n"
-"PO-Revision-Date: 2011-07-29 21:55+0200\n"
+"PO-Revision-Date: 2011-08-02 10:37+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
+"Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: tr\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: Pootle 2.0.5\n"
 
@@ -1313,7 +1313,6 @@ msgid "Analysing & loading logs. This may take a while."
 msgstr "Günlükler çözümleniyor ve yükleniyor. Bu biraz zaman alabilir."
 
 #: js/messages.php:143
-#, fuzzy
 #| msgid ""
 #| "This columns shows the amount of identical queries that are grouped "
 #| "together. However only the SQL Text is being compared, thus the queries "
@@ -1324,8 +1323,8 @@ msgid ""
 "the other attributes of queries, such as start time, may differ."
 msgstr ""
 "Bu sütunlar birlikte gruplanmış özdeş sorguların miktarını gösterir. Ancak "
-"sadece SQL Metin karşılaştırılır, böylece başlama zamanı gibi sorgular diğer "
-"öznitelikler farklı olabilir."
+"sadece SQL Metnin kendisi gruplama kriteri olarak kullanılır, böylece "
+"başlama zamanı gibi, sorguların diğer öznitelikleri farklı olabilir."
 
 #: js/messages.php:144
 msgid ""
