--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-30 14:14-0400\n"
-"PO-Revision-Date: 2011-08-02 10:38+0200\n"
+"PO-Revision-Date: 2011-08-02 10:40+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -1364,10 +1364,9 @@ msgid "Filter queries by word/regexp:"
 msgstr "Kelime/düzenli ifadeye göre sorguları süz"
 
 #: js/messages.php:155
-#, fuzzy
 #| msgid "Group queries, ignoring variable data in WHERE statements"
 msgid "Group queries, ignoring variable data in WHERE clauses"
-msgstr "Sorguları grupla, WHERE ifadelerindeki değişken veri yoksayılıyor"
+msgstr "Grup sorguları, WHERE cümleciklerindeki değişken veri yoksayılıyor"
 
 #: js/messages.php:156
 msgid "Sum of grouped rows:"
