--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-30 14:14-0400\n"
-"PO-Revision-Date: 2011-08-02 10:40+0200\n"
+"PO-Revision-Date: 2011-08-02 10:41+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -1361,7 +1361,7 @@ msgstr "Süzgeç"
 
 #: js/messages.php:154
 msgid "Filter queries by word/regexp:"
-msgstr "Kelime/düzenli ifadeye göre sorguları süz"
+msgstr "Kelime/düzenli ifadeye göre sorguları süz:"
 
 #: js/messages.php:155
 #| msgid "Group queries, ignoring variable data in WHERE statements"
