Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -9916,7 +9916,6 @@ msgstr ""
 "sunucu yükünü %15'e kadar arttırır"
 
 #: server_status.php:1371
-#, fuzzy
 #| msgid ""
 #| "<b>Using the monitor:</b><br/>\n"
 #| "        Ok, you are good to go! Once you click 'Start monitor' your "
@@ -9939,17 +9938,14 @@ msgid ""
 "will load statistics from the logs helping you find what caused the activity "
 "spike.</p>"
 msgstr ""
-"<b>İzleyici kullanımı:</b><br/>\n"
-"Tamam, ilerlemeye hazırsınız! Bir kere 'İzlemeyi başlat'a tıkladığınızda "
-"tarayıcınız tüm görüntülenen\n"
-"çizelgeleri düzenli aralıklarla yenileyecek. 'Ayarlar' altında çizelgeleri "
-"ekleyebilir ve yenileme oranını değiştirebilirsiniz\n"
-"veya her çizelgenin kendi dişli çark simgesini kullanarak herhangi bir "
-"çizelgeyi kaldırabilirsiniz.\n"
-"<p>Ani hareketlilik gördüğünüzde, herhangi bir çizlgede sol fare tuşunu "
-"basılı tutarak ve çizelge üzerinde kaydırarak\n"
-"ilgili zaman aralığını seçin. Bu, ani hareketlenmenin sebebini bulmanızda "
-"yardımcı olan istatistikleri günlükten\n"
+"<b>İzleyici kullanımı:</b><br/> Tamam, ilerlemeye hazırsınız! Bir kere "
+"'İzlemeyi başlat'a tıkladığınızda tarayıcınız tüm görüntülenen çizelgeleri "
+"düzenli aralıklarla yenileyecek. 'Ayarlar' altında çizelgeleri ekleyebilir "
+"ve yenileme oranını değiştirebilirsiniz veya her çizelgenin kendi dişli çark "
+"simgesini kullanarak herhangi bir çizelgeyi kaldırabilirsiniz. <p>Ani "
+"hareketlilik gördüğünüzde, herhangi bir çizlgede sol fare tuşunu basılı "
+"tutarak ve çizelge üzerinde kaydırarak ilgili zaman aralığını seçin. Bu, ani "
+"hareketlenmenin sebebini bulmanızda yardımcı olan istatistikleri günlükten "
 "yükleyecek.</p>"
 
 #: server_status.php:1375
