Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-30 14:14-0400\n"
-"PO-Revision-Date: 2011-08-02 10:44+0200\n"
+"PO-Revision-Date: 2011-08-02 10:45+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -9956,14 +9956,11 @@ msgid ""
 "disable the general_log and empty its table once monitoring is not required "
 "any more."
 msgstr ""
-"<b>Lütfen unutmayın:</b>\n"
-"        general_log'u etkinleştirmek sunucu yükünü %5-15 arttırabilir. Aynı "
-"zamanda günlükten oluşturulan istatistiklerin yoğun görev yükü olduğundan "
-"haberiniz olsun\n"
-"         bu yüzden sadece küçük zaman aralıkları seçmek ve general_log'u "
-"etkisizleştirmek tavsiye edilir ve tablolarını bir defa boşaltmak daha fazla "
-"izlemeyi gerektirmez.\n"
-"        "
+"<b>Lütfen unutmayın:</b> general_log'u etkinleştirmek sunucu yükünü %5-15 "
+"arttırabilir. Aynı zamanda günlükten oluşturulan istatistiklerin yoğun görev "
+"yükü olduğundan haberiniz olsun bu yüzden sadece küçük zaman aralıkları "
+"seçmek ve general_log'u etkisizleştirmek tavsiye edilir ve tablolarını bir "
+"defa boşaltmak daha fazla izlemeyi gerektirmez."
 
 #: server_status.php:1385
 msgid "CPU Usage"
