--- a/po/ja.po
+++ b/po/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-30 14:14-0400\n"
-"PO-Revision-Date: 2011-08-01 16:54+0200\n"
+"PO-Revision-Date: 2011-08-02 11:41+0200\n"
 "Last-Translator: Yuichiro <yuichiro@pop07.odn.ne.jp>\n"
 "Language-Team: japanese <jp@li.org>\n"
 "Language: ja\n"
@@ -1339,7 +1339,7 @@ msgstr "データベースに移動"
 
 #: js/messages.php:148
 msgid "Log analysed, but no data found in this time span."
-msgstr ""
+msgstr "ログの解析を行いましたが、この期間のデータは見つかりませんでした。"
 
 #. l10n: A collection of available filters
 #: js/messages.php:151
