--- a/po/ja.po
+++ b/po/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-30 14:14-0400\n"
-"PO-Revision-Date: 2011-08-02 11:41+0200\n"
+"PO-Revision-Date: 2011-08-02 11:43+0200\n"
 "Last-Translator: Yuichiro <yuichiro@pop07.odn.ne.jp>\n"
 "Language-Team: japanese <jp@li.org>\n"
 "Language: ja\n"
@@ -9920,10 +9920,9 @@ msgid "Series in Chart:"
 msgstr "グラフの系列"
 
 #: server_status.php:1445
-#, fuzzy
 #| msgid "Loading"
 msgid "Loading logs"
-msgstr "読み込み中"
+msgstr "ログの読み込み"
 
 #: server_status.php:1448
 #, fuzzy
