Translation update done using Pootle.

--- a/po/ja.po
+++ b/po/ja.po
@@ -1209,7 +1209,7 @@ msgstr "general_log は有効です。"
 
 #: js/messages.php:116
 msgid "slow_query_log is enabled."
-msgstr ""
+msgstr "slow_query_log は有効です。"
 
 #: js/messages.php:117
 msgid "slow_query_log and general_log are disabled."
