--- a/po/ja.po
+++ b/po/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-30 14:14-0400\n"
-"PO-Revision-Date: 2011-08-02 11:53+0200\n"
+"PO-Revision-Date: 2011-08-02 11:59+0200\n"
 "Last-Translator: Yuichiro <yuichiro@pop07.odn.ne.jp>\n"
 "Language-Team: japanese <jp@li.org>\n"
 "Language: ja\n"
@@ -1311,7 +1311,7 @@ msgstr ""
 
 #: js/messages.php:142
 msgid "Analysing & loading logs. This may take a while."
-msgstr ""
+msgstr "ログの解析および読み込み中。すこし時間がかかることがあります。"
 
 #: js/messages.php:143
 msgid ""
