--- a/ChangeLog
+++ b/ChangeLog
@@ -40,6 +40,7 @@ phpMyAdmin - ChangeLog
 + [interface] Improved support for triggers
 + [interface] Improved server monitoring
 + AJAX for table Structure column Add
++ AJAX for table Operations copy table
 
 3.4.5.0 (not yet released)
 - bug #3375325 [interface] Page list in navigation frame looks odd
