--- a/po/ja.po
+++ b/po/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-30 14:14-0400\n"
-"PO-Revision-Date: 2011-08-02 16:09+0200\n"
+"PO-Revision-Date: 2011-08-03 11:57+0200\n"
 "Last-Translator: Yuichiro <yuichiro@pop07.odn.ne.jp>\n"
 "Language-Team: japanese <jp@li.org>\n"
 "Language: ja\n"
@@ -9947,10 +9947,9 @@ msgid ""
 msgstr "<p>ログの統計元を選択することができます。</p>結果はクエリ文でグループ化されます。"
 
 #: server_status.php:1465
-#, fuzzy
 #| msgid "Query type"
 msgid "Query analyzer"
-msgstr "クエリ種別"
+msgstr "クエリの解析"
 
 #: server_status.php:1501
 #, php-format
