--- a/po/ja.po
+++ b/po/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-30 14:14-0400\n"
-"PO-Revision-Date: 2011-08-03 12:04+0200\n"
+"PO-Revision-Date: 2011-08-03 12:20+0200\n"
 "Last-Translator: Yuichiro <yuichiro@pop07.odn.ne.jp>\n"
 "Language-Team: japanese <jp@li.org>\n"
 "Language: ja\n"
@@ -1321,6 +1321,8 @@ msgid ""
 "However only the SQL query itself has been used as a grouping criteria, so "
 "the other attributes of queries, such as start time, may differ."
 msgstr ""
+"この列は、グループ化された同一のクエリの数を示しています。しかし、１つの SQL "
+"クエリをグループの基準として使用しています。そのため、開始時刻いったような属性は、他クエリでは異なる場合があります。"
 
 #: js/messages.php:144
 msgid ""
