--- a/po/ja.po
+++ b/po/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-30 14:14-0400\n"
-"PO-Revision-Date: 2011-08-03 12:20+0200\n"
+"PO-Revision-Date: 2011-08-03 12:26+0200\n"
 "Last-Translator: Yuichiro <yuichiro@pop07.odn.ne.jp>\n"
 "Language-Team: japanese <jp@li.org>\n"
 "Language: ja\n"
@@ -1330,6 +1330,8 @@ msgid ""
 "same table are also being grouped together, disregarding of the inserted "
 "data."
 msgstr ""
+"INSERT クエリのグループ化が選択されています。そのため、同じテーブルへの INSERT "
+"クエリは挿入されたデータ部は同一のようにみなされて、グループ化が行われます。"
 
 #: js/messages.php:145
 msgid "Log data loaded. Queries executed in this time span:"
