--- a/po/ko.po
+++ b/po/ko.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-30 14:14-0400\n"
-"PO-Revision-Date: 2011-08-04 11:50+0200\n"
+"PO-Revision-Date: 2011-08-04 11:51+0200\n"
 "Last-Translator: Chung-Ook Lee <hantip@gmail.com>\n"
 "Language-Team: korean <ko@li.org>\n"
 "Language: ko\n"
@@ -27,7 +27,7 @@ msgstr "모두 보기"
 #: libraries/schema/Pdf_Relation_Schema.class.php:1105
 #: libraries/schema/User_Schema.class.php:355
 msgid "Page number:"
-msgstr "페이지:"
+msgstr "페이지 번호:"
 
 #: browse_foreigners.php:133
 msgid ""
