--- a/po/ko.po
+++ b/po/ko.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-30 14:14-0400\n"
-"PO-Revision-Date: 2011-08-04 11:51+0200\n"
+"PO-Revision-Date: 2011-08-04 11:53+0200\n"
 "Last-Translator: Chung-Ook Lee <hantip@gmail.com>\n"
 "Language-Team: korean <ko@li.org>\n"
 "Language: ko\n"
@@ -110,7 +110,7 @@ msgstr "디스크 쓰기에 실패했습니다."
 
 #: bs_disp_as_mime_type.php:41
 msgid "Failed to open remote URL"
-msgstr ""
+msgstr "원격 URL 열기 실패했습니다"
 
 #: changelog.php:32 license.php:28
 #, php-format
