--- a/po/ko.po
+++ b/po/ko.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-30 14:14-0400\n"
-"PO-Revision-Date: 2011-08-04 11:54+0200\n"
+"PO-Revision-Date: 2011-08-04 11:55+0200\n"
 "Last-Translator: Chung-Ook Lee <hantip@gmail.com>\n"
 "Language-Team: korean <ko@li.org>\n"
 "Language: ko\n"
@@ -279,10 +279,9 @@ msgid "Rename database to"
 msgstr "데이터베이스 이름 변경"
 
 #: db_operations.php:427
-#, fuzzy
 #| msgid "Rename database to"
 msgid "Remove database"
-msgstr "데이터베이스 이름 변경"
+msgstr "데이터베이스 제거"
 
 #: db_operations.php:439
 #, php-format
