Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-04 14:01+0200\n"
-"PO-Revision-Date: 2011-08-04 17:58+0200\n"
+"PO-Revision-Date: 2011-08-04 17:59+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -1160,7 +1160,7 @@ msgstr "Toplam bellek"
 #: js/messages.php:102
 #| msgid "System memory"
 msgid "Cached memory"
-msgstr "Önbelleklenmiş bellek"
+msgstr "Önbelleklenen bellek"
 
 #: js/messages.php:103
 #| msgid "Buffer Pool"
