--- a/po/tr.po
+++ b/po/tr.po
@@ -1178,10 +1178,9 @@ msgid "Used memory"
 msgstr "Kullanılan bellek"
 
 #: js/messages.php:107
-#, fuzzy
 #| msgid "Total"
 msgid "Total Swap"
-msgstr "Toplam"
+msgstr "Toplam Takas"
 
 #: js/messages.php:108
 msgid "Cached Swap"
