--- a/po/tr.po
+++ b/po/tr.po
@@ -1200,10 +1200,9 @@ msgid "Bytes sent"
 msgstr "Gönderilmiş bayt"
 
 #: js/messages.php:113
-#, fuzzy
 #| msgid "Received"
 msgid "Bytes received"
-msgstr "Alınan"
+msgstr "Alınmış bayt"
 
 #: js/messages.php:114 server_status.php:991
 msgid "Connections"
