--- a/po/tr.po
+++ b/po/tr.po
@@ -9548,10 +9548,10 @@ msgid ""
 "counter counts instances of these waits. If the buffer pool size was set "
 "properly, this value should be small."
 msgstr ""
-"Normal olarak arkaplanda olan InnoDB ara bellek havuzuna yazılır. Ancak, "
-"eğer sayfa oluşturma veya okuma gerekliyse ve temiz sayfalar yoksa önce "
+"Normal olarak arkaplanda olan InnoDB arabellek havuzuna yazılır. Ancak, eğer "
+"sayfa oluşturma veya okuma gerekliyse ve temiz sayfalar yoksa önce "
 "sayfaların temizlenmesi için beklenmesi gereklidir. Bu sayaç bu bekleme "
-"durumlarını sayar. Eğer ara bellek havuzu boyutu düzgün bir şekilde "
+"durumlarını sayar. Eğer arabellek havuzu boyutu düzgün bir şekilde "
 "ayarlandıysa, bu değer küçük olmalıdır."
 
 #: server_status.php:1175
