Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-04 14:01+0200\n"
-"PO-Revision-Date: 2011-08-04 18:35+0200\n"
+"PO-Revision-Date: 2011-08-04 18:40+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -10042,7 +10042,6 @@ msgid ""
 msgstr ""
 
 #: server_status.php:1453
-#, fuzzy
 #| msgid ""
 #| "<b>Using the monitor:</b><br/> Ok, you are good to go! Once you click "
 #| "'Start monitor' your browser will refresh all displayed charts in a "
@@ -10066,10 +10065,10 @@ msgstr ""
 "'İzlemeyi başlat'a tıkladığınızda tarayıcınız tüm görüntülenen çizelgeleri "
 "düzenli aralıklarla yenileyecek. 'Ayarlar' altında çizelgeleri ekleyebilir "
 "ve yenileme oranını değiştirebilirsiniz veya her çizelgenin kendi dişli çark "
-"simgesini kullanarak herhangi bir çizelgeyi kaldırabilirsiniz. <p>Ani "
-"hareketlilik gördüğünüzde, herhangi bir çizlgede sol fare tuşunu basılı "
-"tutarak ve çizelge üzerinde kaydırarak ilgili zaman aralığını seçin. Bu, ani "
-"hareketlenmenin sebebini bulmanızda yardımcı olan istatistikleri günlükten "
+"simgesini kullanarak herhangi bir çizelgeyi kaldırabilirsiniz. "
+"<p>Günlüklerden sorguları görüntülemek için herhangi bir çizelgede sol fare "
+"tuşunu basılı tutarak ve çizelge üzerinde kaydırarak ilgili zaman aralığını "
+"seçin. Bir kere onaylandı mı, bu gruplanmış sorguların tablolarını "
 "yükleyecek.</p>"
 
 #: server_status.php:1458
